objects/Sprint_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Capacity_d__c</fullName>
        <label>Capacity (d)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ressource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ressource</label>
        <referenceTo>Ressource__c</referenceTo>
        <relationshipLabel>Sprint Assignments</relationshipLabel>
        <relationshipName>Sprint_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>copado__Sprint__c</referenceTo>
        <relationshipLabel>Sprint Assignments</relationshipLabel>
        <relationshipName>Sprint_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sprint Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>Sprint Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sprint Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>